# problems

./: 0.in  21203번：  CMakeLists.txt  Main.java  Makefile  README.md  app  cppTest.sh  customCSS.css  lcov.info  main  main.c  main.cpp  main.py  main2  main2.cpp  main2.py  main2.py~  mem_predictor.pt  memory_dataset.json  problems.code-workspace  prog_ehyhtx5r  pythonTest.sh  sfdx-project.json  test.txt  xor2.out  xor3.out  xor6.out
19981번: ЕГЭ/: CMakeLists.txt  coverage_before.info  coverage_diff.info  main  main.gcda  ЕГЭ.cpp
19981번: ЕГЭ/out_diff/14/: index-sort-l.html  index.html  new.gcov.html  type_traits.func-c.html  type_traits.func.html
19981번: ЕГЭ/out_diff/14/bits/: index-sort-l.html  move.h.func.html  new_allocator.h.func.html  ptr_traits.h.func-c.html  stl_algobase.h.gcov.html  stl_construct.h.func-c.html  stl_iterator.h.func-c.html  stl_iterator.h.func.html  stl_uninitialized.h.func-c.html  stl_uninitialized.h.func.html  stl_vector.h.func-c.html  stl_vector.h.func.html  vector.tcc.func-c.html  vector.tcc.func.html
19981번: ЕГЭ/out_diff/home/monika/Documents/problems/19981번: ЕГЭ/: index.html  main.cpp.func-c.html  main.cpp.gcov.html
19981번： ЕГЭ/: CMakeLists.txt  README.md  main.gcno  ЕГЭ
19981번： ЕГЭ/cpp/src/: main.cpp  main.h
19981번： ЕГЭ/out_diff/: index-sort-f.html  index-sort-l.html  index.html
19981번： ЕГЭ/out_diff/14/: index-sort-f.html  new.func-c.html  new.func.html  type_traits.gcov.html
19981번： ЕГЭ/out_diff/14/bits/: alloc_traits.h.gcov.html  allocator.h.gcov.html  index-sort-f.html  index.html  move.h.func-c.html  move.h.gcov.html  new_allocator.h.func-c.html  new_allocator.h.gcov.html  ptr_traits.h.func.html  ptr_traits.h.gcov.html  stl_algobase.h.func-c.html  stl_algobase.h.func.html  stl_construct.h.func.html  stl_construct.h.gcov.html  stl_iterator.h.gcov.html  stl_uninitialized.h.gcov.html  stl_vector.h.gcov.html  vector.tcc.gcov.html
19981번： ЕГЭ/out_diff/14/x86_64-redhat-linux/bits/: c++config.h.gcov.html  index.html
19981번： ЕГЭ/test/: Testmain.cpp
20006번: 랭킹전 대기열/: CMakeLists.txt  README.md  랭킹전 대기열
20006번: 랭킹전 대기열/cpp/src/: main.cpp
20152번: Game Addiction/: CMakeLists.txt  README.md
20152번: Game Addiction/cpp/src/: main.cpp
20153번： 영웅이는 2의 거듭 제곱을 좋아해! 영웅이는 2의 거듭 제곱을 좋아해!/: CMakeLists.txt  README.md  영웅이는 2의 거듭 제곱을 좋아해! 영웅이는 2의 거듭 제곱을 좋아해!.cpp
20954번: 택배 기사 민서/: CMakeLists.txt  택배 기사 민서  택배 기사 민서.cpp
20954번: 택배 기사 민서/cpp/src/: main.cpp  main.h
21208번: Gratitude/: CMakeLists.txt
21208번: Gratitude/cpp/src/: main.h
21208번: Gratitude/test/: Testmain.cpp
21275번： 폰 호석만/: CMakeLists.txt  README.md  폰 호석만.cpp
21275번： 폰 호석만/cpp/src/: main.cpp
21275번： 폰 호석만/test/: Testmain.cpp
21741번: Ожерелье/21741번： Ожерелье/: CMakeLists.txt
21763번： Bingo/: Bingo.cpp  CMakeLists.txt
21763번： Bingo/test/: Testmain.cpp
21869번： Maximum Bishop/: CMakeLists.txt  README.md
21869번： Maximum Bishop/cpp/src/: main.cpp
21869번： Maximum Bishop/test/: Testmain.cpp
22037번： DEX Save/: CMakeLists.txt  README.md  coverage_before.info
22037번： DEX Save/cpp/src/: main.cpp  main.h
22037번： DEX Save/out_diff/14/: index-sort-l.html  iomanip.func.html  iomanip.gcov.html  new.func.html  tuple.func-c.html  tuple.func.html
22037번： DEX Save/out_diff/14/bits/: alloc_traits.h.gcov.html  basic_string.h.func-c.html  basic_string.tcc.func-c.html  basic_string.tcc.gcov.html  char_traits.h.func-c.html  index-sort-f.html  index.html  ios_base.h.gcov.html  move.h.gcov.html  new_allocator.h.func-c.html  ptr_traits.h.func.html  stl_algobase.h.func.html  stl_construct.h.func-c.html  stl_construct.h.func.html  stl_construct.h.gcov.html  stl_function.h.func.html  stl_function.h.gcov.html  stl_iterator_base_types.h.gcov.html  stl_map.h.func.html  stl_pair.h.func-c.html  stl_pair.h.func.html  stl_tree.h.func-c.html  stl_tree.h.gcov.html  stl_vector.h.func-c.html  stl_vector.h.gcov.html
22037번： DEX Save/out_diff/14/ext/: alloc_traits.h.gcov.html  index-sort-l.html  string_conversions.h.func-c.html  string_conversions.h.gcov.html
22037번： DEX Save/test/: Testmain.cpp
22144번： Епрестановка/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Eprestanovka  Eprestanovka_test  Makefile  cmake_install.cmake  coverage_after.info  coverage_before.info  main  main.cpp  main.gcda  main.gcno
22144번： Епрестановка/cpp/src/: main.cpp  main.h
22144번： Епрестановка/out_diff/: index-sort-f.html  index-sort-l.html  index.html
22144번： Епрестановка/out_diff/14/: index-sort-f.html  index-sort-l.html  index.html  new.func-c.html  new.func.html  new.gcov.html  type_traits.func-c.html  type_traits.func.html  type_traits.gcov.html
22144번： Епрестановка/out_diff/14/bits/: alloc_traits.h.gcov.html  allocator.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  move.h.func-c.html  move.h.func.html  move.h.gcov.html  new_allocator.h.func-c.html  new_allocator.h.func.html  new_allocator.h.gcov.html  stl_algobase.h.func-c.html  stl_algobase.h.func.html  stl_algobase.h.gcov.html  stl_construct.h.func-c.html  stl_construct.h.func.html  stl_construct.h.gcov.html  stl_iterator_base_types.h.gcov.html  stl_uninitialized.h.func-c.html  stl_uninitialized.h.func.html  stl_uninitialized.h.gcov.html  stl_vector.h.func-c.html  stl_vector.h.func.html  stl_vector.h.gcov.html
22144번： Епрестановка/out_diff/14/x86_64-redhat-linux/bits/: c++config.h.gcov.html  index.html
22144번： Епрестановка/test/: Testmain.cpp
22609번: Matsuzaki Number/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  boj_22609  boj_22609_test  cmake_install.cmake  main  main.cpp  main.cpp~
22609번: Matsuzaki Number/cpp/src/: main.cpp~  main.h
22609번: Matsuzaki Number/test/: Testmain.cpp  Testmain.cpp~
22937번: 교수님 계산기가 고장났어요!/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  boj_22937  boj_22937_test  cmake_install.cmake  main.cpp  main.cpp~
22937번: 교수님 계산기가 고장났어요!/cpp/src/: main.cpp  main.h
22937번: 교수님 계산기가 고장났어요!/test/: Testmain.cpp
23560번: 약/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Testmain.cpp  boj_23560  cmake_install.cmake  main  main.cpp
(+18080 files in other folders)
