cmake_minimum_required(VERSION 3.10)
project(TestCpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

enable_testing()

include(GoogleTest)

add_subdirectory("19981번： ЕГЭ")
add_subdirectory("20006번： 랭킹전 대기열")
add_subdirectory("20152번： Game Addiction")
add_subdirectory("20153번： 영웅이는 2의 거듭 제곱을 좋아해! 영웅이는 2의 거듭 제곱을 좋아해!")
add_subdirectory("20162번： 간식 파티")
add_subdirectory("20413번： MVP 다이아몬드 (Easy)")
add_subdirectory("20416번： 역전의 제왕 (Easy)")
add_subdirectory("20438번： 출석체크")
add_subdirectory("20455번： Калькулятор")
add_subdirectory("20476번： Занос")
add_subdirectory("20484번： Игра")
add_subdirectory("20626번： AiGo")
add_subdirectory("20837번： Robottävling")
add_subdirectory("20915번： 숫자 카드 놀이")
add_subdirectory("20950번： 미술가 미미")
add_subdirectory("20954번： 택배 기사 민서")
add_subdirectory("21032번： Odd GCD Matching")
add_subdirectory("21041번： Largest Exotic Number")
add_subdirectory("21049번： Coin Stacks")
add_subdirectory("21127번： Binary Supersonic Utahraptors")
add_subdirectory("21154번： Over the Hill, Part 1")
add_subdirectory("21208번： Gratitude")
add_subdirectory("21275번： 폰 호석만")
add_subdirectory("21325번： Free food")
add_subdirectory("21344번： Hot Springs")
add_subdirectory("21396번： 이진수 더하기")
add_subdirectory("21414번： Вычислительная ихтиология")
add_subdirectory("21496번： Вырубка леса")
add_subdirectory("21555번： 빛의 돌 옮기기")
add_subdirectory("21593번： Simple Cron Spec")
add_subdirectory("21616번： Modern Art")